--- a/index.html
+++ b/index.html
@@ -106,39 +106,49 @@
 				</div>
 				<div class="col-md-4">
 					<div class="product">
-					<img src="img/product_ipad.png" alt="">
-					<h3>iPad mini 4</h3>
-					<h4>$700</h4>
+					<a href="p_info.html">
+						<img src="img/product_ipad.png" alt="">
+						<h3>iPad mini 4</h3>
+						<h4>$700</h4>
+					</a>
 				</div>
 				</div>
 				<div class="col-md-4">
 					<div class="product">
+					<a href="p_info.html">
 						<img src="img/product_macbook.png" alt="">
 						<h3>MacBook Pro</h3>
 						<h4>$2200</h4>
+					</a>
 					</div>
 				</div>
 			</div>
 			<div class="row">
 				<div class="col-md-4">
 					<div class="product">
+						<a href="p_info.html">
 						<img src="img/product_iphone7.png" alt="">
 						<h3>iPhone 7</h3>
 						<h4>$800</h4>
+						</a>
 					</div>
 				</div>
 				<div class="col-md-4">
 					<div class="product">
+					<a href="p_info.html">
 						<img src="img/product_macbookair.png" alt="">
 						<h3>MacBook Air</h3>
 						<h4>$2500</h4>
+						</a>
 					</div>
 				</div>
 				<div class="col-md-4">
 					<div class="product">
+					<a href="p_info.html">
 						<img src="img/product_iphone10.png" alt="">
 						<h3>iPhone 10</h3>
 						<h4>$1200</h4>
+						</a>
 					</div>
 				</div>
 			</div>
