--- a/p_info.html
+++ b/p_info.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>K-Store | О нас</title>
+	<title>K-Store | iPhone 6s</title>
 	<link rel="stylesheet" href="lib/bootstrap/css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/main.css">
 </head>
@@ -25,8 +25,8 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li><a href="index.html">Главная <span class="sr-only">(current)</span></a></li>
-        <li class="active"><a href="about.html">О нас</a></li>
-        <li class="dropdown">
+        <li><a href="about.html">О нас</a></li>
+        <li class="active" class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Каталог <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><a href="#">Телефоны</a></li>
@@ -50,7 +50,243 @@
   </div><!-- /.container-fluid -->
 </nav>
 </header>
+<div class="product_info">
+  <div class="container">
+    <div class="row">
+    <h1>iPhone 6s gold</h1>
+      <div id="describe" class="col-md-6">
+        <img src="img/product_iphone6.png" alt="">
+        <div class="row">
+          <div class="col-md-3"></div>
+          <div class="col-md-6">
+            <button class="btn-success">Купить сейчас!</button>
+          </div>
+          <div class="col-md-3"></div>
+        </div>
+        
+        <h2>Описание</h2>
+        <p>Едва начав пользоваться iPhone 6s, вы сразу почувствуете, насколько всё изменилось. Технология 3D Touch открывает потрясающие новые возможности — достаточно одного нажатия. А функция Live Photos позволяет буквально оживить ваши воспоминания. И это только начало. Присмотритесь к iPhone 6s внимательнее, и вы увидите инновации на всех уровнях.
 
+<h2>3D Touch. Новое поколение Multi-Touch.</h2>
+
+С появлением iPhone мир узнал о технологии Multi-Touch, которая навсегда изменила способ взаимодействия с устройствами. Технология 3D Touch открывает совершенно новые возможности. Она позволяет различать силу нажатия на дисплей, что делает многие функции быстрее и удобнее. Кроме того, телефон реагирует на каждый жест лёгким тактильным откликом благодаря использованию нового привода Taptic Engine.
+
+<h2>Камеры. 12-мегапиксельные фотографии. Видео 4К. Live Photos. На долгую память.</h2>
+
+Компания Apple расширила возможности самой популярной в мире камеры. 12-мегапиксельная камера iSight делает чёткие и детальные снимки, а также позволяет снимать потрясающие видео 4K с разрешением почти в четыре раза больше, чем в HD‑видео 1080p. А 5-мегапиксельная HD‑камера FaceTime позволяет делать отличные селфи. Кроме того, теперь у вас есть возможность снимать Live Photos, на которых буквально оживают самые дорогие воспоминания. Эта функция записывает несколько мгновений до и после съёмки фотографии, что позволяет посмотреть её в движении, сделав одно нажатие.
+
+
+
+
+<h2>Технологии. A9. Самый передовой процессор для смартфона.</h2>
+
+
+iPhone 6s оснащён специально разработанным процессором A9 с 64-битной архитектурой. Теперь его производительность достигает уровня, который раньше демонстрировали только настольные компьютеры. Скорость процессора iPhone 6s до 70% выше, чем у моделей предыдущего поколения, а графический процессор работает на 90% быстрее, обеспечивая мгновенный отклик в ресурсоёмких приложениях и играх.
+
+
+
+
+<h2>Дизайн. Выдающийся дизайн. Новый шаг вперёд.</h2>
+
+
+
+Инновации не всегда очевидны, но присмотревшись к iPhone 6s внимательнее, вы увидите фундаментальные перемены. Корпус изготовлен из нового сплава на основе алюминия серии 7000, который применяется в аэрокосмической отрасли. Стекло дисплея iPhone 6s прочнее любого другого стекла для смартфона. И теперь компания Apple предлагает новое цветовое решение: к серебристому, золотому и цвету «серый космос» добавился корпус «розовое золото».
+
+
+
+
+<h2>Touch ID. Улучшенная безопасность. Достаточно одного прикосновения.</h2>
+
+
+Для Touch ID используется новейший датчик идентификации по отпечатку пальца, который позволяет легко и надёжно устанавливать и снимать блокировку с телефона.
+
+
+
+
+<h2>Беспроводная связь. Скорость 4G LTE и Wi‑Fi выше.</h2>
+
+
+iPhone 6s поддерживает стандарт 4G LTE Advanced, что позволяет увеличить скорость подключения практически в два раза по сравнению с моделями предыдущего поколения.* Он также поддерживает 23 диапазона LTE — больше, чем любой другой смартфон. Поэтому вы можете подключаться к ещё большему количеству скоростных сетей 4G LTE в самых разных уголках мира. А при подключении к сети Wi‑Fi iPhone 6s позволяет работать в интернете и загружать приложения почти в два раза быстрее.
+
+
+
+
+<h2>iOS 9. Уникальная система. Неповторимый телефон.</h2>
+
+
+iOS 9 — это самая совершенная, многофункциональная и безопасная операционная система для мобильных устройств во всём мире. Она становится ещё более удобной и незаменимой благодаря новым встроенным приложениям, расширенным возможностям Siri и другим функциям. Тесная интеграция с аппаратным обеспечением Apple гарантирует превосходную совместную работу оборудования и ПО. А в App Store есть множество замечательных приложений, способных в полной мере использовать широкие возможности iPhone.
+
+</p>
+      </div>
+      <div class="col-md-6">
+        <h2>Дисплей</h2>
+        <ul>
+<li>Дисплей Retina HD с технологией 3D Touch</li>
+<li>Широкоформат­ный дисплей с диагональю 4.7 дюйма и подсветкой LED</li>
+<li>1334x750 пикселей, 326 пикселей/дюйм</li>
+<li> Контрастность 1400:1 (стандартная)</li>
+<li>Яркость до 500 кд/м2 (стандартная)</li>
+<li>Полная поддержка стандарта sRGB</li>
+<li>Двухдоменные пиксели для расширения угла просмотра</li>
+<li>Олеофобное покрытие на передней панели, устойчивое к появлению следов от пальцев</li>
+<li>Поддержка одновременного отображения нескольких языков и наборов символов</li>
+<li>Масштабирование экрана</li>
+<li>Удобный доступ</li>
+</ul>
+<br>
+<h2>Память</h2>
+<ul>
+<li>Встроенная память: 32 Гб </li>
+<li>Слот для карты памяти отсутствует</li>
+</ul>
+<br>
+<h2>Процессор и ОС </h2>
+<ul>
+<li>Процессор A9 с 64-битной архитектурой</li>
+<li>Встроенный сопроцессор движения М9</li>
+<li>Операционная система iOS 9</li>
+</ul>
+<br>
+<h2>Мобильная и беспроводная связь</h2>
+<ul>
+<li>GSM/EDGE (850, 900, 1800, 1900 МГц)</li>
+<li>UMTS/HSPA+/DC-HSDPA (850, 900, 1700/2100, 1900, 2100 МГц)</li>
+<li>LTE</li>
+<li>Wi‑Fi 802.11a/b/g/n/ac с технологией MIMO</li>
+<li>NFC</li>
+<li>Bluetooth 4.2</li>
+</ul>
+<br>
+<h2>Геопозиция</h2>
+<ul>
+<li>Assisted GPS и GLONASS</li>
+<li>Цифровой компас</li>
+<li> Wi-Fi</li>
+<li>Мобильная сеть </li>
+<li>Функция точного определения местоположения iBeacon</li>
+</ul>
+<br>
+<h2>Touch ID</h2>
+<ul>
+<li>Датчик идентификации по отпечатку пальца встроен в кнопку «Домой»</li>
+</ul>
+<br>
+<h2>SIM-карта</h2>
+<ul>
+<li>Nano-SIM (iPhone 6s и iPhone 6s Plus не поддерживают существующие карты micro-SIM)</li>
+</ul>
+<br>
+<h2>Камера iSight</h2>
+<ul>
+<li>Новая 12-мегапиксельная камера iSight с размером пикселя 1,22µ</li>
+<li>Live Photos</li>
+<li>Автофокус и технология Focus Pixels</li>
+<li>Оптическая стабилизация изображения (только на iPhone 6s Plus)</li>
+<li>Вспышка True Tone Flash</li>
+<li>Панорамная съёмка (до 63 мегапикселей)</li>
+<li>Автоматическое включение HDR при фотосъёмке</li>
+<li>Контроль экспозиции</li>
+<li>Серийная съëмка</li>
+<li>Режим таймера</li>
+<li>Диафрагма ƒ/2.2</li>
+<li>Пятилинзовый объектив</li>
+<li>Гибридный ИК-фильтр</li>
+<li>Датчик освещённости на задней панели</li>
+<li>Защита объектива сапфировым стеклом </li>
+<li>Автоматическая стабилизация изображения</li>
+<li>Усовершенствованная система тональной компрессии</li>
+<li>Улучшенная технология шумоподавления</li>
+<li>Распознавание лиц</li>
+<li>Привязка фотографий к месту съёмки</li>
+</ul>
+<br>
+<h2></td><td valign="top" class="ggg4"><h2>Запись видео</h2>
+<ul>
+<li>Запись видео 4K (3840х2160 пикселей) с частотой 30 кадров/с</li>
+<li>Запись HD-видео 1080p с частотой 30 или 60 кадров/с</li>
+<li>Запись HD-видео 720p с частотой 30 кадров/с</li>
+<li>Оптическая стабилизация изображения при видеосъёмке (только на iPhone 6s Plus)</li>
+<li>Вспышка True Tone Flash</li>
+<li>Поддержка съёмки замедленного видео с разрешением 1080р и частотой 120 кадров/с или с разрешением 720р и частотой 240 кадров/с</li>
+<li>Режим покадровой съёмки со стабилизацией изображения</li>
+<li>Кинематографическая стабилизация видео (1080p и 720p)</li>
+<li>Следящий автофокус</li>
+<li>Улучшенная технология шумоподавления</li>
+<li>Возможность съёмки 8-мегапиксельных фотографий во время записи видео 4К</li>
+<li>Увеличение при воспроизведении</li>
+<li>Трёхкратное увеличение</li>
+<li>Распознавание лиц</li>
+<li>Привязка видео к месту съёмки</li>
+</ul>
+<br>
+<!--<h2>HD-камера FaceTime</h2>
+<ul>
+<li>5-мегапиксельные фотографии</li>
+<li>Запись HD-видео 720p</li>
+<li>Вспышка Retina Flash</li>
+<li>Диафрагма ƒ/2.2</li>
+<li>Автоматическое включение HDR при фото- и видеосъёмке</li>
+<li>Датчик освещённости на задней панели</li>
+<li>Контроль экспозиции</li>
+<li>Серийная съëмка</li>
+<li>Режим таймера</li>
+<li>Распознавание лиц</li>
+</ul>
+<br>
+<h2>Датчики</h2>
+<ul>
+<li>Датчик идентификации по отпечатку пальца Touch ID</li>
+<li> Барометр</li>
+<li>Трёхосевой гироскоп</li>
+<li>Акселерометр</li>
+<li>Датчик расстояния</li>
+<li>Датчик внешней освещённости</li>
+</ul>
+<br>
+<h2>Разъёмы и входы/выходы</h2>
+<ul>
+<li>3.5-мм разъём для стереонаушников (мини-джек)</li>
+<li>Микрофон</li>
+<li>Разъём Lightning</li>
+<li>Встроенный динамик</li>
+</ul>
+<br>
+<h2>Внешние кнопки и элементы управления</h2>
+<ul>
+<li>Вкл./выкл. / Режим сна/Пробуждение</li>
+<li>Звонок/Бесшумный</li>
+<li>Регулятор громкости</li>
+<li>Домой/Сенсор Touch ID</li>
+</ul>
+<br>
+<h2>Питание и аккумулятор</h2>
+<ul>
+<li>Встроенный литий-ионный аккумулятор</li>
+<li>Зарядка через USB от компьютера или адаптера питания</li>
+<li>В режиме разговора: до 14 часов в сети 3G</li>
+<li>Время ожидания: до 10 дней (250 часов)</li>
+<li>Пользование интернетом: до 10 часов в сети 3G, до 10 в сети 4G LTE, до 11 в сети Wi-Fi</li>
+<li>В режиме воспроизведения HD-видео: до 11 часов</li>
+<li>В режиме воспроизведения аудио: до 50 часов </li>
+</ul>
+<br>
+<h2>Физические характеристики</h2>
+<ul>
+<li>Размеры (В х Ш х Г): 138.3 x 67.1 x 7.1 мм</li>
+<li>Вес: 143 г</li>
+</ul>
+<br>
+<h2>Комплектация</h2>
+<ul>
+<li>Наушники Apple EarPods с пультом управления и микрофоном</li>
+<li>Кабель Lightning/USB</li>
+<li>Адаптер питания USB</li>
+<li>Документация</li>
+</ul>-->
+      </div>
+    </div>
+  </div>
+</div>
 
 
 
