--- a/lab6/src/index.html
+++ b/lab6/src/index.html
@@ -15,5 +15,10 @@
 
 <!-- Latest compiled JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<script>
+function doRed() {
+$("body").css("background-color", "red");
+}
+</script>
 </body>
 </html>
